# image.gorani.me

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: nginx-integration.md  setup.md
scripts/: fix-storage-root.sh  prepare-storage.sh  run-service.sh
sql/: schema.sql
upload_service/: __init__.py  __main__.py  config.py  db.py  image_ops.py  server.py  storage.py
