[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "image-gorani-upload"
version = "0.1.0"
description = "Upload-side image storage service for image.gorani.me"
requires-python = ">=3.9"
dependencies = [
    "Pillow>=11.3.0",
]

[project.scripts]
image-upload = "upload_service.__main__:main"

[tool.setuptools.packages.find]
include = ["upload_service*"]
